--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -42,7 +42,6 @@
 
 
 button {
-  font-size: 0;
   outline: none !important;
   border: 0;
   background: transparent;
@@ -83,11 +82,20 @@ ul li {
   width: 100%;
   max-width: 37.5rem;
   background: #F8F9FB;
-  height: 100vh;
+  height: 100%;
   padding-top: 3.1825rem;
   padding-left: 2.4375rem;
   padding-right: 2.75rem;
-
+  position: relative;
+  &__layout {
+    background: rgba(2, 66, 35, 0.6);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: 9;
+  }
   &__filter, &__sort, &__add-user, &__slider-btn div svg:hover, &__user-card:hover, &__user-card-checked:hover, li:hover {
     cursor: pointer;
   }
@@ -145,7 +153,9 @@ ul li {
     position: relative;
     z-index: 3;
     margin-bottom: 1.6rem !important;
-
+    @media screen and (max-width: 1260px){
+      display: block;
+    }
     svg {
       position: absolute;
       top: 3.5625rem;
@@ -163,12 +173,42 @@ ul li {
     border-radius: 0px 20px 20px 0px;
     z-index: -1;
     padding-left: 1.875rem;
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 64%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%)
+    }
+    @media screen and (max-width: 1260px) {
+        display: none;
+    }
+  }
+  &__checked-mobile {
+    height: 5.6rem;
+    background: linear-gradient(180deg, #00A58F 0%, #00D069 100%);
+    box-shadow: 0px 10px 15px rgba(145, 145, 145, 0.1);
+    border-radius: 0px 0px 20px 20px;
+    position: relative;
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%)
+      }
+    @media screen and (min-width: 1260px) {
+      display: none;
+    }
   }
 
   &__avatar {
     display: flex;
     align-items: center;
-
+    @media screen and (max-width: 1400px) {
+      display: block;
+      text-align: center;
+    }
     img {
       margin-right: 1.48rem;
       width: 100%;
@@ -177,16 +217,26 @@ ul li {
       max-height: 5.3125rem;
       border-radius: 2.5rem;
       object-fit: cover;
+      @media screen and (max-width: 1400px) {
+        margin: 0;
+      }
     }
   }
+
 
   &__person, &__person-checked {
     margin-left: .08rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.7rem 2.4375rem 1.675rem 2.45rem;
+    padding: 1.79rem 2.4375rem 1.675rem 2.45rem;
 
+  }
+
+  &__person {
+    @media screen and (max-width: 1260px){
+      display: block;
+    }
   }
 
   &__person-checked {
@@ -196,6 +246,10 @@ ul li {
     border-radius: 18px;
     width: calc(100% - 96px);
     padding: 1.5rem 2.4375rem 1.675rem 2.45rem;
+    @media screen and (max-width: 1260px){
+      justify-content: center;
+      width: 100%;
+    }
   }
 
   &__info-checked {
@@ -224,9 +278,9 @@ ul li {
   padding-top: 7.6875rem;
   padding-bottom: 7.75rem;
   padding-left: 8.88625rem;
-  position: relative;
-
+  padding-right: 5.4rem;
   &__account {
+    position: relative;
     display: flex;
     z-index: 3;
   }
@@ -236,6 +290,7 @@ ul li {
 
     img {
       border-radius: 10px;
+      width: 100%;
     }
   }
 
@@ -250,6 +305,7 @@ ul li {
   }
 
   &__progress-bar {
+    width: 100%;
     margin-left: .1rem;
   }
 
@@ -260,28 +316,31 @@ ul li {
   }
 
   &__info {
-    padding-left: 22.125rem;
+    padding-left: 32.8%;
+    padding-bottom: 19.8%;
     background: #F8F9FB;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     position: absolute;
     max-width: 61.3125rem;
     width: 100%;
-    max-height: 36.9375rem;
-    height: 100%;
+    height: auto;
     right: 0;
-    bottom: 4.375rem;
+    top: 8.9rem;
   }
 
   &__navbar {
     padding-right: 2.25rem;
-    padding-top: 1.79rem;
+    padding-top: 1.7rem;
     padding-bottom: .25rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    margin-left: auto;
+    justify-content: flex-end;
 
     ul {
+      margin-right: 5.2rem;
+
       display: flex;
       align-items: center;
 
@@ -311,22 +370,23 @@ ul li {
 
   &__tabs-content {
     display: flex;
+    justify-content: space-between;
     margin-left: -0.3125rem;
+    margin-right: 2rem;
   }
   &__stack {
     text-align: center;
-    margin-right: 3.7rem;
     p {
       margin-top: .9rem;
       font-style: normal;
       font-weight: 600;
       font-size: 1.5rem;
-      line-height: 1.4375rem;
+      line-height: 1.7375rem;
     }
   }
   &__all-photos {
     position: absolute;
-    margin-left: 7.68rem;
+    right: 40.3rem;
     margin-top: 1.4rem;
     img {
       margin-right: 1.2rem;
@@ -355,8 +415,7 @@ ul li {
 }
 .content-separator {
   margin-top: 0.3rem!important;
-
-  margin-bottom: 2.66rem;
+  margin-bottom: 2.8rem;
 }
 .flex-wrapper {
   display: flex;
@@ -370,13 +429,19 @@ ul li {
 
 .circular-chart {
   display: block;
-  width: 5.5rem;
-  height: 5.7rem;
+  width: 100%;
+  height: 100%;
+  max-width: 5.5rem;
+  max-height: 5.7rem;
 }
 .circular-chart-info {
   display: block;
-  width: 10rem;
-  height: 10rem;
+  width: 100%;
+  height: 100%;
+  max-width: 9.9rem;
+  max-height: 9.7rem;
+  height: -webkit-fill-available;
+
 }
 
 .circle-bg {
@@ -391,6 +456,10 @@ ul li {
   stroke-linecap: round;
   transform-origin: center;
   animation: progress 1s ease-out forwards;
+  @media screen and (max-width: 1260px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .circle-anti {
@@ -451,4 +520,90 @@ hr {
   font-size: 0;
   box-shadow: 0px 5px 10px rgba(144, 144, 144, 0.35);
   border-radius: 50%;
+}
+
+//index2
+
+.new-user {
+  background: #F8F9FB;
+  padding: 4rem 4.1rem 4rem 5rem;
+  width: 100%;
+  &__nav {
+    max-height: 4rem;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    div {
+      h1 {
+        font-size: 2.125rem;
+        line-height: 2.0625rem;
+        letter-spacing: 0.017rem;
+      }
+    }
+  }
+  &__title {
+    width: 100%;
+  }
+  &__control {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    div svg {
+      margin-left: 3.25rem;
+    }
+    button {
+      max-width: 13.8rem;
+      width: 100%;
+      margin-left: auto;
+      height: 100%;
+
+
+      background: #28B46F;
+      box-shadow: 0px 10px 15px rgba(144, 144, 144, 0.2);
+      border-radius: 8px;
+
+
+      letter-spacing: 0.1rem;
+      font-weight: 500;
+      font-size: 1.375rem;
+
+      color: #FFFFFF;
+    }
+  }
+  &__steps {
+    display: flex;
+    margin-top: 4.5rem;
+    margin-left: 0.13rem
+  }
+  &__step {
+    position: relative;
+    margin-right: 7rem;
+    width: 210px;
+    height: 118px;
+
+    background: #FFFFFF;
+    border-radius: 8px;
+
+    box-shadow: -10px 0px 40px -17px rgba(0, 0, 0, 0.2);
+    div {
+      position: absolute;
+      top: 48%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%)
+    }
+    div p:nth-child(1) {
+      font-weight: 600;
+      font-size: 34px;
+
+      color: #000000;
+    }
+    div p:nth-child(3) {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 22px;
+    }
+  }
 }
