--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -295,42 +295,70 @@ ul li {
   @media screen and (max-width: 900px) {
     padding: 3rem;
   }
-
+  &__full-progress {
+    width: 39.125rem;
+    height: 1.875rem;
+    background: linear-gradient(90deg, rgba(1, 169, 140, 0.12) 0%, rgba(0, 207, 106, 0.12) 100%);
+    border-radius: 20px;
+  }
+  &__line {
+    width: 77%;
+    height: 1.875rem;
+    background: linear-gradient(90deg, #00A98C 23.39%, #00CF6A 80.15%);
+    border-radius: 20px;
+  }
   &__main, &__personal {
     padding-left: .8%;
     margin-top: .3rem;
+    font-size: 1.375rem;
   }
 
-  &__main ul li span:nth-child(1), &__personal ul li span:nth-child(1) {
+  &__personal div {
+    display: flex;
+    div {
+      display: grid;
+    }
+    div:nth-child(1) {
+      width: 11.875rem;
+      font-weight: 600;
+      span:nth-child(2){
+        margin-top: 2.9rem;
+      }
+      span:nth-child(3){
+        margin-top: 4.3rem;
+        line-height: 1.625rem;
+        letter-spacing: 0.06rem;
+      }
+    }
+    div:nth-child(2) {
+      span:nth-child(2){
+        margin-top: .3rem;
+        width: 90%;
+        line-height: 1.625rem;
+      }
+      div{
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+
+  &__main ul li span:nth-child(1) {
     display: inline-block;
     width: 9.75rem;
-    margin-bottom: 47px;
+    margin-bottom: 2.9375rem;
   }
 
-  &__main ul li span:nth-child(1), &__personal ul li span:nth-child(1) {
+  &__main ul li span:nth-child(1) {
     width: 11.1rem;
   }
 
-  &__main ul li span:nth-child(1), &__personal ul li span:nth-child(1) {
-    font-size: 22px;
+  &__main ul li span:nth-child(1) {
     font-weight: 600;
   }
 
-  &__main ul li span:nth-child(2), &__personal ul li span:nth-child(2), &__personal ul li div:nth-child(2) {
-    font-size: 22px;
-  }
-
-  &__personal ul li:nth-child(2) {
-    display: flex;
-  }
-
-  &__personal ul li div:nth-child(2) {
-    width: 100%;
-    margin-left: 3.45rem;
-    padding-right: 2rem;
-  }
-
   &__account {
+
     position: relative;
     display: flex;
     z-index: 3;
@@ -340,6 +368,7 @@ ul li {
   }
 
   &__avatar {
+
     z-index: 2;
     position: relative;
     left: 0;
@@ -367,23 +396,19 @@ ul li {
   }
 
   &__progress-account {
+    max-width: 39.2rem;
+    width: 100%;
     position: relative;
-    margin-left: 2.18rem;
+    margin-left: 2.23rem;
     margin-top: .9rem;
     @media screen and (max-width: 1400px) {
       text-align: center;
-      margin-top: 3rem;
+      margin: 0 auto;
     }
-
-    div {
-      position: relative;
-    }
-
     p {
       margin-bottom: 1.65rem;
       @media screen and (max-width: 1400px) {
         margin-bottom: 4rem;
-
       }
     }
   }
@@ -391,17 +416,58 @@ ul li {
   &__progress-bar {
     width: 100%;
     margin-left: .1rem;
+    max-width: 39.125rem;
+    height: 1.875rem;
+    background: linear-gradient(90deg, rgba(1, 169, 140, 0.12) 0%, rgba(0, 207, 106, 0.12) 100%);
+    border-radius: 20px;
+    @media screen and (max-width:1400px) {
+      margin: 0 auto;
+    }
   }
+  //
+  //&__tooltip{
+  //  left: 100%;
+  //  top: -1rem;
+  //  position: absolute;
+  //  width: 56px;
+  //  height: 42px;
+  //  padding: 20px;
+  //  border-radius: 10px;
+  //  background: #fff;
+  //  box-shadow: inset 0px 0px 0px 3px rgba(0,201,111, 0.8);
+  //  span {
+  //    font-size: 1rem;
+  //    font-weight: 600;
+  //    position: absolute;
+  //    left: 50%;
+  //    transform: translate(-50%, -29%);
+  //  }
+  //}
+  //&__tooltip:after{
+  //  content: '';
+  //  position: absolute;
+  //  left: 23px;
+  //  bottom: -5px;
+  //  width: 11px;
+  //  height: 11px;
+  //  background: inherit;
+  //  transform: rotate(45deg);
+  //  box-shadow: inset -5px -5px 0px -2px rgba(0,201,111, 0.8);
+  //}
+
 
   &__tooltip {
     position: absolute;
-    top: -3.575rem;
+    top: -0.9rem;
     left: 71%;
 
-    @media screen and (min-width: 991px) and (max-width: 1400px) {
-      left: 34vw;
-    }
 
+    @media screen and (max-width: 1400px) {
+      top: 1.1rem;
+    }
+    &--percentage {
+      font-size: 1.125rem!important;
+    }
   }
 
   &__info {
@@ -416,12 +482,8 @@ ul li {
     width: -webkit-fill-available;
     height: 83%;
     top: 8.9rem;
-
-    min-height: 37rem;
-    @media screen and (max-width: 1200px) {
-      margin-left: 0;
-    }
     @media screen and (max-width: 1400px) {
+      margin-left: 0;
       margin-top: 3rem;
       position: unset;
       padding: 2rem;
@@ -459,8 +521,9 @@ ul li {
         position: relative;
       }
 
-      li:hover {
+      li a:not(.active):hover {
         top: -0.3125rem;
+        position: relative;
       }
     }
   }
@@ -474,6 +537,10 @@ ul li {
     display: flex;
     justify-content: space-between;
     margin-left: -0.3125rem;
+    padding-right: 5%;
+    @media screen and (max-width: 1400px) {
+      padding: 0;
+    }
     @media screen and (max-width: 1200px) {
       margin-right: 0;
     }
@@ -493,7 +560,7 @@ ul li {
 
   &__all-photos {
     margin-top: 1.4rem;
-    margin-left: 25%;
+    margin-left: 25.3%;
     width: 100%;
     @media screen and (max-width: 1400px) {
       margin: 1rem auto;
@@ -502,7 +569,7 @@ ul li {
     }
 
     &__active {
-      border: 2px solid #01CE6B;
+      border: 3px solid #01CE6B;
     }
 
     img {
@@ -618,7 +685,7 @@ ul li {
 .percentage {
   fill: #333333;
   font-family: 'Gotham Pro Bold';
-  font-size: 0.58em;
+  font-size: 0.58rem;
   text-anchor: middle;
 }
 
